Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/RTIIP_Status_Setting__mdt.object-meta.xml
<CustomObject>
    <label>RTIIP Status Setting</label>
    <pluralLabel>RTIIP Status Settings</pluralLabel>
</CustomObject>