Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Allow_Stop_Clock_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Stop_Clock_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Stop Clock Override</label>
    <type>Checkbox</type>
</CustomField>