Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Allowed_Statuses__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Statuses__c</fullName>
    <label>Allowed Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>