Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Clock_Action__c.field-meta.xml
<CustomField>
    <fullName>Clock_Action__c</fullName>
    <label>Clock Action</label>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Start</fullName>
                    <default>true</default>
                    <label>Start</label>
                </value>
                <value>
                    <fullName>Stop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>