Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>