Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Due_Date_Action__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Action__c</fullName>
    <label>Due Date Action</label>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clear</fullName>
                </value>
                <value>
                    <fullName>Recalculate</fullName>
                </value>
                <value>
                    <fullName>Initialize</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>