Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Extension_Days__c.field-meta.xml
<CustomField>
    <fullName>Extension_Days__c</fullName>
    <label>Extension Days</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>