Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Stop_Clock_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stop_Clock_Start_Date__c</fullName>
    <label>Stop Clock Start Date</label>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Next Business Day</fullName>
                </value>
                <value>
                    <fullName>Same Business Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>