Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Right to Information Access Application</fullName>
                    <default>true</default>
                    <label>Right to Information Access Application</label>
                </value>
                <value>
                    <fullName>Information Privacy Access Application</fullName>
                </value>
                <value>
                    <fullName>Information Privacy Amendment Application</fullName>
                </value>
                <value>
                    <fullName>Administrative Access Request</fullName>
                </value>
                <value>
                    <fullName>Internal Review</fullName>
                </value>
                <value>
                    <fullName>External Review</fullName>
                </value>
                <value>
                    <fullName>QCAT Review</fullName>
                </value>
                <value>
                    <fullName>Privacy Complaint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>