Salesforce/force-app/main/default/objects/RTIIP_Status_Setting__mdt/listViews/External_Review.listView-meta.xml
<ListView>
    <fullName>External_Review</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Allowed_Statuses__c</columns>
    <columns>Allow_Stop_Clock_Override__c</columns>
    <columns>Clock_Action__c</columns>
    <columns>Code__c</columns>
    <columns>Due_Date_Action__c</columns>
    <columns>Extension_Days__c</columns>
    <columns>Status__c</columns>
    <columns>Stop_Clock_Start_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Usage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>External Review</value>
        </filters>
    <label>External Review</label>
    <language>en_US</language>
</ListView>